{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 33,
  "lineage": "f81a084e-2868-004b-bdae-69b4f4aa4551",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:internet-gateway/igw-0b4f8822cf014042d",
            "id": "igw-0b4f8822cf014042d",
            "owner_id": "047625676456",
            "tags": {
              "Name": "tomita-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-igw",
              "Project": "tomita-api"
            },
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047625676456:loadbalancer/app/tomita-alb/01df0ed1a0a97cc5",
            "arn_suffix": "app/tomita-alb/01df0ed1a0a97cc5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tomita-alb-1141831403.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:047625676456:loadbalancer/app/tomita-alb/01df0ed1a0a97cc5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tomita-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-011cbea57432b32af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0318777c653808c78"
              },
              {
                "subnet_id": "subnet-0e7da5a5aae65a83e"
              }
            ],
            "subnets": [
              "subnet-0318777c653808c78",
              "subnet-0e7da5a5aae65a83e"
            ],
            "tags": {
              "Name": "tomita-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-alb",
              "Project": "tomita-api"
            },
            "vpc_id": "vpc-07506662e11c12e9a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047625676456:listener/app/tomita-alb/01df0ed1a0a97cc5/18c06497f0932987",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:047625676456:targetgroup/tomita-tg/650c83673086b60d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:047625676456:listener/app/tomita-alb/01df0ed1a0a97cc5/18c06497f0932987",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:047625676456:loadbalancer/app/tomita-alb/01df0ed1a0a97cc5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "tomita-api"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047625676456:targetgroup/tomita-tg/650c83673086b60d",
            "arn_suffix": "targetgroup/tomita-tg/650c83673086b60d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:047625676456:targetgroup/tomita-tg/650c83673086b60d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:047625676456:loadbalancer/app/tomita-alb/01df0ed1a0a97cc5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tomita-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tomita-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-tg",
              "Project": "tomita-api"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:route-table/rtb-095900a3509a65013",
            "id": "rtb-095900a3509a65013",
            "owner_id": "047625676456",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4f8822cf014042d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tomita-rt-public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-rt-public",
              "Project": "tomita-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e02cf8a904a1211",
            "route_table_id": "rtb-095900a3509a65013",
            "subnet_id": "subnet-0318777c653808c78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cc7db8df4932074",
            "route_table_id": "rtb-095900a3509a65013",
            "subnet_id": "subnet-0e7da5a5aae65a83e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:security-group/sg-011cbea57432b32af",
            "description": "Permite HTTP desde Internet hacia el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011cbea57432b32af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP publico",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tomita-sg-alb",
            "name_prefix": "",
            "owner_id": "047625676456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tomita-sg-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-sg-alb",
              "Project": "tomita-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:security-group/sg-018453f9b6dde194d",
            "description": "Permite trafico del ALB al puerto 3000 de las instancias",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018453f9b6dde194d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH administracion (restringir IP en produccion)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App port desde ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011cbea57432b32af"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "tomita-sg-ec2",
            "name_prefix": "",
            "owner_id": "047625676456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tomita-sg-ec2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-sg-ec2",
              "Project": "tomita-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:security-group/sg-017ce7400a2eba3cc",
            "description": "Permite MySQL 3306 solo desde EC2 privado",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017ce7400a2eba3cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL desde EC2 unicamente",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018453f9b6dde194d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tomita-sg-rds",
            "name_prefix": "",
            "owner_id": "047625676456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tomita-sg-rds"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-sg-rds",
              "Project": "tomita-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:subnet/subnet-06d309ea31a768271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d309ea31a768271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047625676456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tomita-private-1a"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-private-1a",
              "Project": "tomita-api"
            },
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:subnet/subnet-01e4eee0d1e290258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e4eee0d1e290258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047625676456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tomita-private-1b"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-private-1b",
              "Project": "tomita-api"
            },
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:subnet/subnet-0318777c653808c78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0318777c653808c78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047625676456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tomita-public-1a"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-public-1a",
              "Project": "tomita-api"
            },
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:subnet/subnet-0e7da5a5aae65a83e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7da5a5aae65a83e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047625676456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tomita-public-1b"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-public-1b",
              "Project": "tomita-api"
            },
            "vpc_id": "vpc-07506662e11c12e9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047625676456:vpc/vpc-07506662e11c12e9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0957a433fa7e2fb8e",
            "default_route_table_id": "rtb-07d6327f4f0689774",
            "default_security_group_id": "sg-07e473baae6f512d1",
            "dhcp_options_id": "dopt-0a4862bf6f0296db2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07506662e11c12e9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d6327f4f0689774",
            "owner_id": "047625676456",
            "tags": {
              "Name": "tomita-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "tomita-vpc",
              "Project": "tomita-api"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}